<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    android:id="@+id/out_layout">
    <LinearLayout
        android:id="@+id/frag_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <TextView
                android:id="@+id/frag_tv_currenttemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3℃"
                android:textSize="40sp"
                android:textStyle="bold"/> // 城市的温度信息
            <TextView
                android:id="@+id/frag_tv_city"
                style="@style/todaytext"
                android:text="北京"
                android:layout_below="@id/frag_tv_currenttemp"/> // 城市的地址信息
            <TextView
                android:id="@+id/frag_tv_condition"
                style="@style/todaytext"
                android:text="晴朗"
                android:layout_below="@id/frag_tv_city"/>
            <TextView
                android:id="@+id/frag_tv_date"
                android:text="2020-12-25"
                android:layout_below="@id/frag_tv_condition"
                android:layout_marginTop="20dp"
                style="@style/todaytext" />
            <TextView
                android:id="@+id/frag_tv_wind"
                style="@style/todaytext"
                android:layout_below="@id/frag_tv_date"
                android:layout_marginTop="5dp"
                android:text="西南风3~4级"/> // 左边的信息
            <TextView
                android:id="@+id/frag_tv_line1"
                android:layout_width="2dp"
                android:layout_height="30dp"
                android:layout_toRightOf="@id/frag_tv_wind"
                android:background="#000000"
                android:layout_alignBottom="@id/frag_tv_wind"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <TextView
                android:id="@+id/frag_tv_temprange"
                style="@style/todaytext"
                android:text="-1~9℃"
                android:layout_toRightOf="@id/frag_tv_line1"
                android:layout_alignBottom="@id/frag_tv_wind"/><!-- 温度信息-->
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:id="@+id/frag_iv_today"
                android:scaleType="centerCrop"
                android:layout_alignParentRight="true"
                android:src="@mipmap/icon"/><!-- 图片-->
        </RelativeLayout>
        <!-- 用于显示未来三天的天气情况的背景-->
        <LinearLayout
            android:id="@+id/frag_center_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:background="@drawable/frag_bg"
            ></LinearLayout>
        <!-- 用于表示指数信息的线性布局-->
        <LinearLayout
            android:id="@+id/frag_index_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/frag_bg"
            android:layout_margin="10dp"
            android:padding="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/frag_index_tv_dress"
                    style="@style/indextext"
                    android:text="@string/number1"
                    android:drawableBottom="@mipmap/icon_cloth"/>
                <ImageView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#2E8B57"/>
                <TextView
                    android:id="@+id/frag_index_tv_washcar"
                    style="@style/indextext"
                    android:text="@string/number2"
                    android:drawableBottom="@mipmap/icon_car"/>
                <ImageView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#2E8B57"/>
                <TextView
                    android:id="@+id/frag_index_tv_cold"
                    style="@style/indextext"
                    android:text="@string/number3"
                    android:drawableBottom="@mipmap/icon_ganmao"/>
            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#2E8B57"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/frag_index_tv_sport"
                    style="@style/indextext"
                    android:text="@string/number4"
                    android:drawableBottom="@mipmap/icon_sport"/>
                <ImageView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#2E8B57"/>
                <TextView
                    android:id="@+id/frag_index_tv_rays"
                    style="@style/indextext"
                    android:text="@string/number5"
                    android:drawableBottom="@mipmap/icon_light"/>
                <ImageView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#2E8B57"/>
                <TextView style="@style/indextext"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>